src/App.css
body {
    font-family: 'PT Sans Narrow', sans-serif;
    background-color: #22aac0;
    color: #463b31;
}

.hidden {
    display: none;
}

.clear {
    clear: both;
}

table {
    border-collapse: collapse;
}

.trackStack {
    display: flex;
    flex-wrap: nowrap;
    justify-content: left;
    align-items: flex-end;
    align-content: flex-start;
    margin-left: 20px;
}

.trackStack .switch {
    float: left;
    max-width: 23px;
    writing-mode: vertical-rl;
    transform: rotate(180deg);
    font-weight: bold;
    font-size: 14pt;
    border-right: 3px solid #696152;
    border-top: 3px solid #696152;
    border-bottom: 3px solid #696152;
    margin-bottom: 20px;
    min-height: 139px;
    cursor: pointer;
    padding-top: 10px;
}

.trackStack .tracks {
    float: left;
}

.track {
    margin-top: 20px;
    margin-bottom: 20px;
    margin-right: 20px;
}

.track table {
    background-color: #f6f0e6;
    border: 3px solid #696152;
}

.track td {
    vertical-align: top;
    text-align: center;
    border-left: 1px solid #696152;
}

.track td div{
    min-width: 18px;
    min-height: 18px;
    text-align: center;
}

.track td div.space{
    min-width: 100px;
    max-width: 100px;
    min-height: 50px;
    text-align: center;
    font-size: 8pt;
}

.track td div.header {
    font-weight: bold;
    font-size: 14pt;
    min-width: 100px;
}

.track thead td {
    border: 3px solid #696152;
}

.track thead td:first-child {
    border-bottom: 0px;
}

.track td:nth-child(3n-1) {
    border-left: 3px solid #696152;
}

.track div.occupied {
    margin: 0 auto;
    background-color: dodgerblue;
    width: 7px;
    height: 7px;
    border-radius: 3px;
}

.exploration {
    color: #202020;
    background-color: royalblue;
}

.science {
    color: #202020;
    background-color: forestgreen;
}

.technology {
    color: #202020;
    background-color: goldenrod;
}

.military {
    color: #202020;
    background-color: darkred;
}

.track .trackHeaderRow img{
    max-width: 20px;
    max-height: 20px;
    margin-right: 2px;
    margin-left: 2px;
    margin-top: 3px;
}
.track .trackHeaderRow td.era-cell{
    position: relative;
    background-color: #dad4c2;
}

.track .trackHeaderRow .era-back{
    background-color: white;
    border: 1px solid #696152;
    border-radius: 25%;
    min-width: 50px;
    position: absolute;
    top: -9px;
    left: 129px;
    z-index: -1;
}

.track .trackHeaderRow .era{
    background-color: white;
    border: 1px solid #696152;
    border-radius: 50%;
    font-size: 8pt;
    font-weight: bold;
    min-width: 18px;
    margin: auto;
    position: absolute;
    top: -16px;
    left: 145px;
    z-index: -1;
}

.city {
    float: left;
    padding-left: 20px;
    padding-right: 20px;
    text-align: center;
    background-color: #dad4c2;
}

.city td {
    border: 1px solid #696152;
}

.city td div{
    min-width: 7px;
    min-height: 7px;
}

.city tr:first-child td {
    border-top: 3px solid #696152;
}

.city tr:nth-child(3n+3) td {
    border-bottom: 3px solid #696152;
}

.city td:first-child {
    border-left: 3px solid #696152;
}

.city td:nth-child(3n+3) {
    border-right: 3px solid #696152;
}

.city td {
    width: 25px;
    height: 25px;
    max-width: 25px;
    max-height: 25px;
    background-color: #f6f0e6;
}

.city td div{
    margin: 0 auto;
    width: 90%;
    height: 90%;
}

/* dot */
.city td div.d{
    width: 35%;
    height: 35%;
    border-radius: 50%;
    background-color: #ff4a3b;
}

/* farm */
.city td div.f, .city td div.adding-f:hover, .incomeMat td div.f{
    background-image: url("./img/farm.png");
    background-size: 100% 100%;
}

/* house */
.city td div.h, .city td div.adding-h:hover, .incomeMat td div.h{
    background-image: url("./img/house.png");
    background-size: 100% 100%;
}

/* market */
.city td div.m, .city td div.adding-m:hover, .incomeMat td div.m{
    background-image: url("./img/market.png");
    background-size: 100% 100%;
}

/* armory */
.city td div.a, .city td div.adding-a:hover, .incomeMat td div.a{
    background-image: url("./img/armory.png");
    background-size: 100% 100%;
}

.city td div.adding-f:hover,
.city td div.adding-h:hover,
.city td div.adding-m:hover,
.city td div.adding-a:hover {
    cursor: pointer;
}

.animated {
    animation-duration: 2.5s;
    animation-fill-mode: both;
    animation-iteration-count: infinite;
}

@keyframes pulse {
    0% {transform: scale(1);}
    50% {transform: scale(1.1);}
    100% {transform: scale(1);}
}

.pulse {
    animation-name: pulse;
    animation-duration: 2.5s;
}

.city p.smallMessage {
    margin-top: 0px;
    font-size: 11pt;
}

.incomeMat {
    float: left;
    padding-top: 10px;
    padding-right: 10px;
    padding-bottom: 9px;
    padding-left: 10px;
    background-color: #dad4c2;
}

.incomeMat table {
    border: 3px solid #696152;
    margin-bottom: 10px;
}

.incomeMat td {
    text-align: center;
    border-left: 1px solid #696152;
    background-color: #f6f0e6;
}

.incomeMat td div.space{
    min-width: 65px;
    max-width: 65px;
    min-height: 65px;
    max-height: 65px;
    text-align: center;
    font-size: 8pt;
    display: flex;
    flex-direction: column;
    justify-content: space-between;
}

.space div.incomeImage img{
    max-width: 30px;
    max-height: 30px;
}

.incomeMat td div.m:hover {
    background-image: none;
 }

.incomeMat td div.h:hover {
    background-image: none;
}

.incomeMat td div.f:hover {
    background-image: none;
}

.incomeMat td div.a:hover {
    background-image: none;
}

div.incomeTrack {
    display: flex;
    align-items: center;
    flex-wrap: wrap;
}

div.incomeTrackHeader {
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
    align-items: stretch;
    max-width: 20px;
}

div.incomeTrackSpaces {
    float: left;
}

div.incomeTrackName {
    transform: rotate(270deg);
    font-size: 9pt;
}

text.hidden {
    fill: white;
}

.map-wrapper {
    text-align: center;
}

.map {
    position: relative;
    display: inline-block;
}

.map img {
    display: block;
    max-width: 100%;
    height: auto;
}

.map svg {
    position: absolute;
    top: 0;
    left: 0;
}

svg g {
    fill: none;
    /*fill-opacity: 0.6;*/
}
svg g:hover {
    /*fill: #696152;*/
    /*fill-opacity: 0.7;*/
}
svg g:hover text {
    /*fill-opacity: 1;*/
}

svg g polygon {
    /*stroke: #000000;*/
    /*stroke-width: 0.5;*/
    /*transition: fill-opacity .5s;*/
}

svg g polygon.highlight {
    fill: #dad4c2;
    fill-opacity: 0.7;
}
svg g text {
    font-size: 7pt;
    fill: #696152;
    stroke: #ffffff;
    text-shadow: 1px 1px 5px;
}

.resourceTrack {
    clear: both;
    text-align: center;
    margin-left: 50px;
}

.resource{
    float: left;
    min-width: 40px;
    max-width: 40px;
    min-height: 40px;
    max-height: 40px;
}

.resource img{
    max-width: 90%;
    margin-left: 4px;
    display: block;
}

.resource.choosing {
    cursor: pointer;
}

img.icon-in-text{
    max-width: 18px;
    max-height: 18px;
    margin-right: 2px;
    margin-left: 2px;
    vertical-align: text-bottom;
}

div.incomeTrackHeader img.icon-in-text{
    margin-top: 19px;
}

.modal {
    position: fixed;
    top: 0;
    left: 0;
    width:100%;
    height: 100%;
    background: rgba(0, 0, 0, 0.6);
}

.modal-main {
    position:fixed;
    background: white;
    width: 80%;
    height: auto;
    top:50%;
    left:50%;
    transform: translate(-50%,-50%);
}

.display-block {
    display: block;
}

.display-none {
    display: none;
}

